--- a/x86_64.config
+++ b/x86_64.config
@@ -1,93 +1,89 @@
-CONFIG_MODULES=y
-CONFIG_HAVE_DOT_CONFIG=y
-CONFIG_ALL_NONSHARED=y
-CONFIG_ALL_KMODS=y
-
 #机型选择
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_Generic=y
 
 #镜像设置
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_GRUB_IMAGES=y
-CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_PACKAGE_grub2-efi=y
+CONFIG_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 
 #设置分区大小
 CONFIG_TARGET_KERNEL_PARTSIZE=16
-CONFIG_TARGET_ROOTFS_PARTSIZE=1008
+CONFIG_TARGET_ROOTFS_PARTSIZE=300
 
-#额外包
-CONFIG_PACKAGE_autocore-x86=y
-CONFIG_PACKAGE_ipv6helper=y
+# 选择插件
+CONFIG_PACKAGE_luci-app-docker=m
+CONFIG_PACKAGE_luci-i18n-docker-zh-cn=m
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-mwan3=m
+CONFIG_PACKAGE_luci-app-mwan3helper=m
+CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=m
+CONFIG_PACKAGE_luci-app-syncdial=m
+CONFIG_PACKAGE_luci-app-ttyd=m
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=m
+CONFIG_PACKAGE_luci-app-webadmin=m
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=m
+CONFIG_PACKAGE_luci-app-frpc=m
 
-# Firmware
-CONFIG_PACKAGE_amdgpu-firmware=y
-CONFIG_PACKAGE_ath9k-htc-firmware=y
-CONFIG_B43LEGACY_FW_SQUASH=y
-CONFIG_B43LEGACY_FW_SQUASH_COREREVS="1,2,3,4"
-CONFIG_PACKAGE_bnx2-firmware=y
-CONFIG_PACKAGE_rt2800-usb-firmware=y
-CONFIG_PACKAGE_wireless-regdb=y
-
-#插件选择
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
-CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
-CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils=y
-
-
-# 主题
-CONFIG_PACKAGE_luci-theme-darkmatter=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-
-# 协议
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-proto-ppp=y
-
-# 防火墙
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_iptables=y
-CONFIG_IPTABLES_CONNLABEL=y
-CONFIG_IPTABLES_NFTABLES=y
-CONFIG_PACKAGE_iptables-mod-conntrack-label=y
-CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_MINIUPNPD_IGDv2=y
-
-# 必备
-CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_vim=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
+CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
+CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
+CONFIG_PACKAGE_ddns-scripts_nsupdate=y
+CONFIG_PACKAGE_ddns-scripts_route53-v1=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_e2fsprogs=y
-CONFIG_PACKAGE_mkf2fs=y
-CONFIG_PACKAGE_acpid=y
-CONFIG_PACKAGE_iputils-traceroute6=y
-
-# 添加emmc支持
-CONFIG_kmod-sdhci=y
-CONFIG_kmod-mmc-spi=y
-CONFIG_KERNEL_MMC_SDHCI=y
-CONFIG_KERNEL_MMC_SDHCI_IO_ACCESSORS=y
-CONFIG_KERNEL_MMC_SDHCI_PCI=y
-CONFIG_KERNEL_MMC_RICOH_MMC=y
-CONFIG_KERNEL_MMC_SDHCI_PLTFM=y
-CONFIG_KERNEL_MMC_WBSD=y
-CONFIG_KERNEL_MMC_TIFM_SD=y
-CONFIG_KERNEL_MMC_CB710=y
-CONFIG_KERNEL_MMC_VIA_SDMMC=y
-CONFIG_KERNEL_MMC_VUB300=y
-CONFIG_KERNEL_MMC_USHC=y
-CONFIG_KERNEL_MMC_USDHI6ROL0=y
-CONFIG_KERNEL_MMC_CQHCI=y
-CONFIG_KERNEL_MMC_TOSHIBA_PCI=y
-CONFIG_KERNEL_MMC_MTK=y
-CONFIG_KERNEL_MMC_SDHCI_XENON=y
-
-#binfmt
-CONFIG_BINFMT_MISC=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_kmod-kvm-amd=y
+CONFIG_PACKAGE_kmod-kvm-intel=y
+CONFIG_PACKAGE_kmod-kvm-x86=y
+CONFIG_OPENSSL_ENGINE_CRYPTO=y
+CONFIG_OPENSSL_ENGINE_DIGEST=y
+CONFIG_OPENSSL_WITH_CAMELLIA=y
+CONFIG_OPENSSL_WITH_COMPRESSION=y
+CONFIG_OPENSSL_WITH_DTLS=y
+CONFIG_OPENSSL_WITH_EC2M=y
+CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
+CONFIG_OPENSSL_WITH_GOST=y
+CONFIG_OPENSSL_WITH_IDEA=y
+CONFIG_OPENSSL_WITH_MDC2=y
+CONFIG_OPENSSL_WITH_RFC3779=y
+CONFIG_OPENSSL_WITH_SEED=y
+CONFIG_OPENSSL_WITH_WHIRLPOOL=y
+CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+CONFIG_OPENVPN_openssl_ENABLE_PF=y
+CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
+CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+CONFIG_KERNEL_BUILD_USER="eSir Playground"
+CONFIG_GRUB_TITLE="OpenWrt AutoBuild by eSirPlayground"
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-ohci-pci=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_kmod-sdhci=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb2-pci=y
+CONFIG_PACKAGE_kmod-usb3=y
