--- a/x86_64.config
+++ b/x86_64.config
@@ -12,4 +12,115 @@ CONFIG_TARGET_KERNEL_PARTSIZE=16
 CONFIG_TARGET_ROOTFS_PARTSIZE=300
 
 #插件选择
-CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_UnblockNeteaseMusic-Go=m
+CONFIG_PACKAGE_adbyby=m
+CONFIG_PACKAGE_curl=m
+CONFIG_PACKAGE_etherwake=m
+CONFIG_PACKAGE_ip-tiny=m
+CONFIG_PACKAGE_ipset=m
+CONFIG_PACKAGE_iptables-mod-ipsec=m
+CONFIG_PACKAGE_kmod-crypto-cbc=m
+CONFIG_PACKAGE_kmod-crypto-deflate=m
+CONFIG_PACKAGE_kmod-crypto-des=m
+CONFIG_PACKAGE_kmod-crypto-echainiv=m
+CONFIG_PACKAGE_kmod-crypto-hmac=m
+CONFIG_PACKAGE_kmod-crypto-kpp=m
+CONFIG_PACKAGE_kmod-crypto-lib-blake2s=m
+CONFIG_PACKAGE_kmod-crypto-lib-chacha20=m
+CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=m
+CONFIG_PACKAGE_kmod-crypto-lib-curve25519=m
+CONFIG_PACKAGE_kmod-crypto-lib-poly1305=m
+CONFIG_PACKAGE_kmod-crypto-md5=m
+CONFIG_PACKAGE_kmod-ipsec=m
+CONFIG_PACKAGE_kmod-ipsec4=m
+CONFIG_PACKAGE_kmod-ipsec6=m
+CONFIG_PACKAGE_kmod-ipt-ipsec=m
+CONFIG_PACKAGE_kmod-ipt-offload=m
+CONFIG_PACKAGE_kmod-iptunnel4=m
+CONFIG_PACKAGE_kmod-iptunnel6=m
+CONFIG_PACKAGE_kmod-lib-zlib-deflate=m
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=m
+CONFIG_PACKAGE_kmod-nf-flow=m
+CONFIG_PACKAGE_kmod-tcp-bbr=m
+CONFIG_PACKAGE_kmod-tun=m
+CONFIG_PACKAGE_kmod-udptunnel4=m
+CONFIG_PACKAGE_kmod-udptunnel6=m
+CONFIG_PACKAGE_kmod-wireguard=m
+CONFIG_PACKAGE_libcap=m
+CONFIG_PACKAGE_libcurl=m
+CONFIG_PACKAGE_libgmp=m
+CONFIG_PACKAGE_libipset=m
+CONFIG_PACKAGE_libminiupnpc=m
+CONFIG_PACKAGE_libmnl=m
+CONFIG_PACKAGE_libnatpmp=m
+CONFIG_PACKAGE_libstdcpp=m
+CONFIG_PACKAGE_libuv=m
+CONFIG_PACKAGE_libwebsockets-full=m
+CONFIG_PACKAGE_luci-app-accesscontrol=m
+CONFIG_PACKAGE_luci-app-adbyby-plus=m
+CONFIG_PACKAGE_luci-app-arpbind=m
+CONFIG_PACKAGE_luci-app-autoreboot=m
+CONFIG_PACKAGE_luci-app-ddns=m
+CONFIG_PACKAGE_luci-app-filetransfer=m
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=m
+CONFIG_PACKAGE_luci-app-nlbwmon=m
+CONFIG_PACKAGE_luci-app-ramfree=m
+CONFIG_PACKAGE_luci-app-ttyd=m
+CONFIG_PACKAGE_luci-app-turboacc=m
+CONFIG_PACKAGE_luci-app-unblockmusic=m
+CONFIG_PACKAGE_luci-app-upnp=m
+CONFIG_PACKAGE_luci-app-vlmcsd=m
+CONFIG_PACKAGE_luci-app-vsftpd=m
+CONFIG_PACKAGE_luci-app-wireguard=m
+CONFIG_PACKAGE_luci-app-wol=m
+CONFIG_PACKAGE_luci-app-xlnetacc=m
+CONFIG_PACKAGE_luci-app-zerotier=m
+CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-xlnetacc-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=m
+CONFIG_PACKAGE_luci-lib-fs=m
+CONFIG_PACKAGE_luci-proto-wireguard=m
+CONFIG_PACKAGE_miniupnpd=m
+CONFIG_PACKAGE_nlbwmon=m
+CONFIG_PACKAGE_pdnsd-alt=m
+CONFIG_PACKAGE_strongswan=m
+CONFIG_PACKAGE_strongswan-charon=m
+CONFIG_PACKAGE_strongswan-ipsec=m
+CONFIG_PACKAGE_strongswan-minimal=m
+CONFIG_PACKAGE_strongswan-mod-aes=m
+CONFIG_PACKAGE_strongswan-mod-gmp=m
+CONFIG_PACKAGE_strongswan-mod-hmac=m
+CONFIG_PACKAGE_strongswan-mod-kernel-libipsec=m
+CONFIG_PACKAGE_strongswan-mod-kernel-netlink=m
+CONFIG_PACKAGE_strongswan-mod-nonce=m
+CONFIG_PACKAGE_strongswan-mod-pubkey=m
+CONFIG_PACKAGE_strongswan-mod-random=m
+CONFIG_PACKAGE_strongswan-mod-sha1=m
+CONFIG_PACKAGE_strongswan-mod-socket-default=m
+CONFIG_PACKAGE_strongswan-mod-stroke=m
+CONFIG_PACKAGE_strongswan-mod-updown=m
+CONFIG_PACKAGE_strongswan-mod-x509=m
+CONFIG_PACKAGE_strongswan-mod-xauth-generic=m
+CONFIG_PACKAGE_strongswan-mod-xcbc=m
+CONFIG_PACKAGE_ttyd=m
+CONFIG_PACKAGE_vlmcsd=m
+CONFIG_PACKAGE_vsftpd-alt=m
+CONFIG_PACKAGE_wireguard-tools=m
+CONFIG_PACKAGE_wol=m
+CONFIG_PACKAGE_zerotier=m
