--- a/x86_64.config
+++ b/x86_64.config
@@ -124,3 +124,16 @@ CONFIG_PACKAGE_vsftpd-alt=m
 CONFIG_PACKAGE_wireguard-tools=m
 CONFIG_PACKAGE_wol=m
 CONFIG_PACKAGE_zerotier=m
+
+#科学上网
+CONFIG_PACKAGE_luci-app-ssr-plus=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=m
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=m
