--- a/x86_64.config
+++ b/x86_64.config
@@ -1,70 +1,41 @@
-#机型选择
+# Target System (x86)
 CONFIG_TARGET_x86=y
+
+# Subtarget (x86_64)
 CONFIG_TARGET_x86_64=y
+
+# Target Profile (Generic x86/64)
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-#镜像设置
+# Target Images
 CONFIG_GRUB_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 
-#设置分区大小
+# Image Options
 CONFIG_TARGET_KERNEL_PARTSIZE=16
-CONFIG_TARGET_ROOTFS_PARTSIZE=300
+CONFIG_TARGET_ROOTFS_PARTSIZE=1008
 
-#插件选择
-CONFIG_PACKAGE_UnblockNeteaseMusic-Go=m
-CONFIG_PACKAGE_adbyby=m
-CONFIG_PACKAGE_curl=m
-CONFIG_PACKAGE_etherwake=m
-CONFIG_PACKAGE_ip-tiny=m
-CONFIG_PACKAGE_ipset=m
-CONFIG_PACKAGE_iptables-mod-ipsec=m
-CONFIG_PACKAGE_kmod-crypto-cbc=m
-CONFIG_PACKAGE_kmod-crypto-deflate=m
-CONFIG_PACKAGE_kmod-crypto-des=m
-CONFIG_PACKAGE_kmod-crypto-echainiv=m
-CONFIG_PACKAGE_kmod-crypto-hmac=m
-CONFIG_PACKAGE_kmod-crypto-kpp=m
-CONFIG_PACKAGE_kmod-crypto-lib-blake2s=m
-CONFIG_PACKAGE_kmod-crypto-lib-chacha20=m
-CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=m
-CONFIG_PACKAGE_kmod-crypto-lib-curve25519=m
-CONFIG_PACKAGE_kmod-crypto-lib-poly1305=m
-CONFIG_PACKAGE_kmod-crypto-md5=m
-CONFIG_PACKAGE_kmod-ipsec=m
-CONFIG_PACKAGE_kmod-ipsec4=m
-CONFIG_PACKAGE_kmod-ipsec6=m
-CONFIG_PACKAGE_kmod-ipt-ipsec=m
-CONFIG_PACKAGE_kmod-ipt-offload=m
-CONFIG_PACKAGE_kmod-iptunnel4=m
-CONFIG_PACKAGE_kmod-iptunnel6=m
-CONFIG_PACKAGE_kmod-lib-zlib-deflate=m
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=m
-CONFIG_PACKAGE_kmod-nf-flow=m
-CONFIG_PACKAGE_kmod-tcp-bbr=m
-CONFIG_PACKAGE_kmod-tun=m
-CONFIG_PACKAGE_kmod-udptunnel4=m
-CONFIG_PACKAGE_kmod-udptunnel6=m
-CONFIG_PACKAGE_kmod-wireguard=m
-CONFIG_PACKAGE_libcap=m
-CONFIG_PACKAGE_libcurl=m
-CONFIG_PACKAGE_libgmp=m
-CONFIG_PACKAGE_libipset=m
-CONFIG_PACKAGE_libminiupnpc=m
-CONFIG_PACKAGE_libmnl=m
-CONFIG_PACKAGE_libnatpmp=m
-CONFIG_PACKAGE_libstdcpp=m
-CONFIG_PACKAGE_libuv=m
-CONFIG_PACKAGE_libwebsockets-full=m
+
+# Extra packages(额外包)
+CONFIG_PACKAGE_automount=m
+CONFIG_PACKAGE_autosamba=m
+CONFIG_PACKAGE_ipv6helper=m
+CONFIG_PACKAGE_jose=m
+CONFIG_PACKAGE_libjose=m
+CONFIG_PACKAGE_tang=m
+
+# Luci
 CONFIG_PACKAGE_luci-app-accesscontrol=m
 CONFIG_PACKAGE_luci-app-adbyby-plus=m
 CONFIG_PACKAGE_luci-app-arpbind=m
 CONFIG_PACKAGE_luci-app-autoreboot=m
+CONFIG_PACKAGE_luci-app-baidupcs-web=m
 CONFIG_PACKAGE_luci-app-ddns=m
 CONFIG_PACKAGE_luci-app-filetransfer=m
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=m
 CONFIG_PACKAGE_luci-app-nlbwmon=m
 CONFIG_PACKAGE_luci-app-ramfree=m
+CONFIG_PACKAGE_luci-app-samba=m
 CONFIG_PACKAGE_luci-app-ttyd=m
 CONFIG_PACKAGE_luci-app-turboacc=m
 CONFIG_PACKAGE_luci-app-unblockmusic=m
@@ -84,6 +55,7 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-samba-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=m
@@ -95,9 +67,102 @@ CONFIG_PACKAGE_luci-i18n-wol-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-xlnetacc-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=m
 CONFIG_PACKAGE_luci-lib-fs=m
+CONFIG_PACKAGE_luci-proto-ipv6=m
 CONFIG_PACKAGE_luci-proto-wireguard=m
+CONFIG_PACKAGE_luci-theme-argon=m
+
+# 百度云
+CONFIG_PACKAGE_baidupcs-web=m
+# 解锁网易云音乐
+CONFIG_PACKAGE_UnblockNeteaseMusic-Go=m
+
 CONFIG_PACKAGE_miniupnpd=m
+
+# 科学上网
+CONFIG_PACKAGE_luci-app-ssr-plus=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=m
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=m
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=m
+
+# Uknow
+CONFIG_PACKAGE_6in4=m
+CONFIG_PACKAGE_adbyby=m
+CONFIG_PACKAGE_bash=m
+CONFIG_PACKAGE_curl=m
+CONFIG_PACKAGE_etherwake=m
+CONFIG_PACKAGE_ip-tiny=m
+CONFIG_PACKAGE_ip6tables=m
+CONFIG_PACKAGE_ipset=m
+CONFIG_PACKAGE_iptables-mod-ipsec=m
+CONFIG_PACKAGE_jansson=m
+
+CONFIG_PACKAGE_kmod-crypto-cbc=m
+CONFIG_PACKAGE_kmod-crypto-deflate=m
+CONFIG_PACKAGE_kmod-crypto-des=m
+CONFIG_PACKAGE_kmod-crypto-echainiv=m
+CONFIG_PACKAGE_kmod-crypto-hmac=m
+CONFIG_PACKAGE_kmod-crypto-kpp=m
+CONFIG_PACKAGE_kmod-crypto-lib-blake2s=m
+CONFIG_PACKAGE_kmod-crypto-lib-chacha20=m
+CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=m
+CONFIG_PACKAGE_kmod-crypto-lib-curve25519=m
+CONFIG_PACKAGE_kmod-crypto-lib-poly1305=m
+CONFIG_PACKAGE_kmod-crypto-md5=m
+CONFIG_PACKAGE_kmod-ip6tables=m
+CONFIG_PACKAGE_kmod-ipsec=m
+CONFIG_PACKAGE_kmod-ipsec4=m
+CONFIG_PACKAGE_kmod-ipsec6=m
+CONFIG_PACKAGE_kmod-ipt-ipsec=m
+CONFIG_PACKAGE_kmod-ipt-nat6=m
+CONFIG_PACKAGE_kmod-ipt-offload=m
+CONFIG_PACKAGE_kmod-iptunnel=m
+CONFIG_PACKAGE_kmod-iptunnel4=m
+CONFIG_PACKAGE_kmod-iptunnel6=m
+CONFIG_PACKAGE_kmod-lib-zlib-deflate=m
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=m
+CONFIG_PACKAGE_kmod-nf-flow=m
+CONFIG_PACKAGE_kmod-nf-ipt6=m
+CONFIG_PACKAGE_kmod-nf-nat6=m
+CONFIG_PACKAGE_kmod-nf-reject6=m
+CONFIG_PACKAGE_kmod-sit=m
+CONFIG_PACKAGE_kmod-tcp-bbr=m
+CONFIG_PACKAGE_kmod-tun=m
+CONFIG_PACKAGE_kmod-udptunnel4=m
+CONFIG_PACKAGE_kmod-udptunnel6=m
+CONFIG_PACKAGE_kmod-wireguard=m
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_PACKAGE_kmod-lib-crc16=y
+CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y
+
+CONFIG_PACKAGE_libcap=m
+CONFIG_PACKAGE_libcurl=m
+CONFIG_PACKAGE_libgmp=m
+CONFIG_PACKAGE_libhttp-parser=m
+CONFIG_PACKAGE_libipset=m
+CONFIG_PACKAGE_libminiupnpc=m
+CONFIG_PACKAGE_libmnl=m
+CONFIG_PACKAGE_libnatpmp=m
+CONFIG_PACKAGE_libstdcpp=m
+CONFIG_PACKAGE_libuv=m
+CONFIG_PACKAGE_libwebsockets-full=m
+
 CONFIG_PACKAGE_nlbwmon=m
+CONFIG_PACKAGE_odhcp6c=m
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=m
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_pdnsd-alt=m
 CONFIG_PACKAGE_strongswan=m
 CONFIG_PACKAGE_strongswan-charon=m
@@ -118,22 +183,15 @@ CONFIG_PACKAGE_strongswan-mod-updown=m
 CONFIG_PACKAGE_strongswan-mod-x509=m
 CONFIG_PACKAGE_strongswan-mod-xauth-generic=m
 CONFIG_PACKAGE_strongswan-mod-xcbc=m
+
 CONFIG_PACKAGE_ttyd=m
 CONFIG_PACKAGE_vlmcsd=m
 CONFIG_PACKAGE_vsftpd-alt=m
 CONFIG_PACKAGE_wireguard-tools=m
 CONFIG_PACKAGE_wol=m
+CONFIG_PACKAGE_xinetd=m
 CONFIG_PACKAGE_zerotier=m
 
-#科学上网
-CONFIG_PACKAGE_luci-app-ssr-plus=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=m
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=m
-CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=m
+CONFIG_PACKAGE_ntfs3-mount=y
+CONFIG_PACKAGE_samba36-server=y
+CONFIG_PACKAGE_wsdd2=y
